--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,22 @@
 .hero-img{
- background-image: url(../assets/img/hero.png);
- height: 575px;
+ /* background-image: url(../assets/img/hero.png);
+ height: 575px; */
  background-repeat: no-repeat;
  background-position: center;
+
+}
+@media screen and (min-width:768px){
+    .hero-img{
+        background-image: url(../assets/img/hero.png);
+        height: 575px;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .hero-img{
+        background-image: url(../assets/img/hero-sm.png);
+        height: 200px;
+    }
 }
 
 .button{
