--- a/src/components/HomeSection.css
+++ b/src/components/HomeSection.css
@@ -3,7 +3,35 @@
     height: 575px;
 }
 
+/* @media screen and (min-width:768px) {
+    .img-size{
+        display: block;
+       content: url(../assets/img/interno.jpg);
+    }
+} */
+
 .img-size{
+    display: none;
     width: 725px;
     height: 575px;
+}
+
+.img-size-sm{
+    display: none;
+    width: 400px;
+    height: 350px;
+}
+
+@media screen and (min-width:768px) {
+    .img-size{
+        display: block;
+       content: url(../assets/img/interno.jpg);
+    }
+}
+
+@media screen and (max-width:767px) {
+    .img-size-sm{
+        display: block;
+       content: url(../assets/img/interno.jpg);
+    }
 }
