--- a/src/pages/CardBevande.css
+++ b/src/pages/CardBevande.css
@@ -1,16 +1,10 @@
-/* .title-section{
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-} */
-
-.menu-card{
+.bevande-card{
     width: 350px;
     height: 450px;
     border: 3px solid red;
  }
 
- .menu-card:hover{
+ .bevande-card:hover{
     transform: scale(1.1);
     transition: all .3s;
     cursor: pointer;
