aggiunta pagina form e sistemato codice e alcuni bug

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -20,7 +20,7 @@
 }
 
 .button{
-    background-color: #ff0000;
+    /* background-color: #ff0000; */
     padding: 12px;
     /* border-radius: 8px; */
 }
